--- a/quiz/templates/quiz/base.html
+++ b/quiz/templates/quiz/base.html
@@ -4,26 +4,21 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Метрострою 80!</title>
-	<link rel="stylesheet" href="{% static 'quiz/new/style.css' %}">
-	<link rel="stylesheet" href="{% static 'quiz/new/fm.revealator.jquery.css' %}">
-	<link rel="stylesheet" href="{% static 'quiz/new/components.css' %}">
-	<link rel="stylesheet" href="{% static 'quiz/new/custom.css' %}">
-	<link rel="stylesheet" href="{% static 'quiz/new/plugins.css' %}">
-	<script src="{% static 'quiz/new/js/jquery-1.11.3.min.js' %}"></script>
-	<script src="{% static 'quiz/new/js/fm.revealator.jquery.js' %}"></script>
+	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,300,700&amp;subset=all' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="{% static 'quiz/style.css' %}">
+	<link rel="stylesheet" href="{% static 'quiz/fm.revealator.jquery.css' %}">
+	<link rel="stylesheet" href="{% static 'quiz/components.css' %}">
+	<link rel="stylesheet" href="{% static 'quiz/custom.css' %}">
+	<link rel="stylesheet" href="{% static 'quiz/plugins.css' %}">
+	<link rel="stylesheet" href="{% static 'quiz/default.css' %}">
+	<link href="{% static 'quiz/bootstrap.min.css' %}" rel="stylesheet" type="text/css"/>
+
+	<script src="{% static 'quiz/js/jquery-1.11.3.min.js' %}"></script>
+	<script src="{% static 'quiz/js/fm.revealator.jquery.js' %}"></script>
+
 </head>
 
-<style>
-body {
-
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-}
-</style>
-
-
-<body background="{% static 'quiz/new/images/index.jpg' %}">
+<body background="{% static 'quiz/images/index.jpg' %}">
 
 {% block content %}
 
