--- a/quiz/templates/quiz/quiz.html
+++ b/quiz/templates/quiz/quiz.html
@@ -3,35 +3,41 @@
 
 {% block content %}
 
-<section class="c-layout-revo-slider c-layout-revo-slider-4">
-		<div class="tp-banner">
-			<ul>
-				<li data-transition="fade" data-slotamount="1" data-masterspeed="500">
-					<img alt="" src="{% static 'quiz/images/index.jpg' %}" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat">
-					<div class="caption customin customout tp-resizeme" data-x="center" data-y="100" data-hoffset="" data-voffset="-50" data-speed="500" data-start="1000" data-customin="x:0;y:0;z:-20;rotationX:0.5;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;" data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;" data-easing="Back.easeOut" data-splitin="none" data-splitout="none" data-elementdelay="0.1" data-endelementdelay="0.1" data-endspeed="600">
-						<div class="c-content-title-1 divnew2">
-							<h3 class="c-center c-font-uppercase c-font-bold c-font-ms-green">Вопрос № {{ question.number }}</h3>
-							<h3 class="c-center c-font-white">
-								<p class="divnew ">{{ question.title }}</p>
-							</h3>
-						</div>
-						<form method="post">
-						{% csrf_token %}
-							<table class="cellspacing">
-								<tr>
-									<td width="50%" align="right"><button name="ans_but" value="1" class="c-font-24 btn btn-xlg c-btn-ms-green butwidth">{{ question.ans1 }}</button></td>
-									<td width="50%" align="left"><button name="ans_but" value="2" class="c-font-24 btn btn-xlg c-btn-ms-green butwidth">{{ question.ans2 }}</button></td>
-								</tr>
-								<tr>
-									<td align="right"><button name="ans_but" value="3" class="c-font-24 btn btn-xlg c-btn-ms-green butwidth">{{ question.ans3 }}</button></td>
-									<td align="left"><button name="ans_but" value="4" class="c-font-24 btn btn-xlg c-btn-ms-green butwidth">{{ question.ans4 }}</button></td>
-								</tr>
-							</table>
-						</form>
-					</div>
-				</li>
-			</ul>
-		</div>
-	</section>
+<div class="section6 revealator-zoomin revealator-delay1 revealator-once">
+	<h3 class="c-center c-font-uppercase c-font-bold c-font-ms-green">Вопрос № {{ question.number }}</h3>
+	<h3 class="c-center c-font-white">
+		<p class="divnew ">{{ question.title }}</p>
+	</h3>
+
+	<form method="post">
+		{% csrf_token %}
+		<table class="cellspacing ">
+			<tr>
+				<td width="50%" align="right">
+					<button name="ans_but" value="1" class="btn btn-xlg c-btn-ms-green butwidth">
+						<span class="c-font-20 c-font-bold">{{ question.ans1 }}</span>
+					</button>
+				</td>
+				<td width="50%" align="left">
+					<button name="ans_but" value="2" class="btn btn-xlg c-btn-ms-green butwidth">
+						<span class="c-font-20 c-font-bold">{{ question.ans2 }}</span>
+					</button>
+				</td>
+			</tr>
+			<tr>
+				<td align="right">
+					<button name="ans_but" value="3" class="btn btn-xlg c-btn-ms-green butwidth">
+						<span class="c-font-20 c-font-bold">{{ question.ans3 }}</span>
+					</button>
+				</td>
+				<td align="left">
+					<button name="ans_but" value="4" class="btn btn-xlg c-btn-ms-green butwidth">
+						<span class="c-font-20 c-font-bold">{{ question.ans4 }}</span>
+					</button>
+				</td>
+			</tr>
+		</table>
+	</form>
+</div>
 
 {% endblock %}
