--- a/quiz/templates/quiz/quiz.html
+++ b/quiz/templates/quiz/quiz.html
@@ -11,7 +11,10 @@
 
 	<form method="post">
 		{% csrf_token %}
-		<table class="cellspacing ">
+
+		<input type="hidden" name="right_answer" value="{{ question.r_ans }}">
+
+		<table class="cellspacing">
 			<tr>
 				<td width="50%" align="right">
 					<button name="ans_but" value="1" class="btn btn-xlg c-btn-ms-green butwidth">
