переход с GET на POST выполнен! реализован подсчет введенных ответов юзером

--- a/quiz/templates/quiz/answer.html
+++ b/quiz/templates/quiz/answer.html
@@ -23,7 +23,7 @@
 			<table class="cellspacing">
 				<tr>
 					<td align="right" class="trans">
-						<img alt="" src="{% get_static_prefix %}quiz/images/{{ question.number }}.jpg" height="454">
+						<img alt="" src="{% get_static_prefix %}quiz/images/{{ question.number }}.jpg">
 					</td>
 					<td align="left" valign="top" class="bgtrans">
 						{{ question.text_answer|safe }}
