добавлен корректный подсчет правильных ответов. мелкая адаптация под моб. версию. корректное отображение кнопок с разным размером шрифта

--- a/quiz/templates/quiz/index.html
+++ b/quiz/templates/quiz/index.html
@@ -7,16 +7,16 @@
 	<h4 class="c-block-bordered c-font-40 c-font-bold c-font-uppercase c-font-ms-green c-block">
 		<p>ИСТОРИЯ ПЕТЕРБУРГСКОГО МЕТРОСТРОЯ</p>
 		<div class="c-font-24 c-font-lowercase c-font-thin">
-			<p class="divnew2 c-font-white bgtrans">
-				21 января 2021 года петербургскому Метрострою исполняется 80 лет.<br>
-				Ровно столько же лет и ленинградскому-петербургскому метростроению,
-				ведь все эти годы за строительство метро отвечала одна организация – ОАО «Метрострой».<br>
-				<br>
-				Тест рассчитан на широкую аудиторию и будет интересен как специалистам, так и тем,
-				кто просто хочет узнать для себя что-то новое из истории нашего города и истории строительства метро.
-			</p>
+			<div class="divnew2 c-font-white bgtrans">
+				<p>21 января 2021 года петербургскому Метрострою исполняется 80 лет.</p>
+				<p>Ровно столько же лет и ленинградскому-петербургскому метростроению,
+					ведь все эти годы за строительство метро отвечала одна организация –
+					ОАО&nbsp«Метрострой».</p>
+				<p>Тест рассчитан на широкую аудиторию и будет интересен как специалистам, так и тем,
+					кто просто хочет узнать для себя что-то новое из истории нашего города и истории строительства метро.</p>
+			</div>
 		</div>
-
+		<br>
 		<a href="{% url 'quiz' %}" class="btn btn-xlg c-btn-ms-green c-font-uppercase c-font-bold">
 			<span class="c-font-20">Пройти тест</span></a>
 
