--- a/quiz/templates/quiz/quiz.html
+++ b/quiz/templates/quiz/quiz.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="section6 revealator-zoomin revealator-delay1 revealator-once">
-	<h3 class="c-center c-font-uppercase c-font-bold c-font-ms-green">Вопрос № {{ question.number }}</h3>
+	<h3 class="c-font-34 c-center c-font-uppercase c-font-bold c-font-ms-green">Вопрос № {{ question.number }}</h3>
 	<h3 class="c-center c-font-white">
 		<div class="divnew bgtrans">{{ question.title|safe }}</div>
 	</h3>
