--- a/quiz/static/quiz/plugins.css
+++ b/quiz/static/quiz/plugins.css
@@ -225,7 +225,7 @@ label.control-label {
   padding: 11px 26px 9px 26px;
 }
 .btn.btn-xlg {
-  padding: 16px 44px 14px 44px;
+  padding: 16px;
 }
 .btn.btn-xxlg {
   padding: 24px 44px 24px 44px;
