--- a/quiz/templates/quiz/base.html
+++ b/quiz/templates/quiz/base.html
@@ -33,6 +33,12 @@
 
 {% endblock %}
 
+<br>
+<div class="footer bgtrans c-font-uppercase c-font-bold c-font-ms-green">
+   &copy; ОАО "Метрострой", 2021,
+	<a href="mailto:mail@metrostroy-spb.ru" style="color: #00a6b5">mail@metrostroy-spb.ru</a>,
+	тел. 635-77-55
+</div>
 
 </body>
 </html>
