--- a/quiz/templates/quiz/answer_w.html
+++ b/quiz/templates/quiz/answer_w.html
@@ -23,7 +23,7 @@
 			<table class="cellspacing-0">
 				<tr>
 					<td align="center" class="trans">
-						<img alt="" src="{% get_static_prefix %}quiz/images/{{ question.number }}.jpg">
+						<img alt="" src="{% get_static_prefix %}quiz/images/{{ question.number }}.jpg" width="100%">
 					</td>
 				</tr>
 				<tr>
